--- a/public/css/index.css
+++ b/public/css/index.css
@@ -131,10 +131,10 @@ img {
     background: #fccb90;
     
     /* Chrome 10-25, Safari 5.1-6 */
-    background: -webkit-linear-gradient(to right, red, orange, yellow, green, blue, purple);
+    background: -webkit-linear-gradient(to right, blue, purple,red);
     
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background: linear-gradient(to right, red, orange, yellow, green, blue, purple);
+    background: linear-gradient(to right, blue, purple,red);
 }
 .gradient-custom-1 {
     /* fallback for old browsers */
