--- a/views/login.pug
+++ b/views/login.pug
@@ -17,9 +17,9 @@ block content
                                         h4.mt-1.mb-5.pb-1 Ünnepeljünk együtt!
                                     form(action="/login", method="POST").form-outline.mb-4.pt-1.mb-5.pb-1
                                         label.form-label(for='form2Example11') E-mail cím
-                                        input(type="email", name="email", placeholder="Email", required="ture", value="kecske2@gmail.com").form-control
+                                        input(type="email", name="email", placeholder="Email", required="ture", value="kecske2@gmail.com").form-control.rounded
                                         label.form-label(for='form2Example22') Jelszó
-                                        input(type="password", name="password", placeholder="Jelszó", required="ture", value="asdasd").form-control
+                                        input(type="password", name="password", placeholder="Jelszó", required="ture", value="asdasd").form-control.rounded
                                         br
                                         input(type="submit", name="submit" value="Bejelentkezés").btn.btn-primary.gradient-custom-2
                                         // <a class="text-muted" href="#!">Forgot password?</a>
