--- a/views/register.pug
+++ b/views/register.pug
@@ -16,11 +16,11 @@ block content
                                         h2.mb-5
                                             b Regisztrálj!
                                     form(action="/register", method="POST").form-outline.mb-4.pt-1.mb-5.pb-1
-                                        input(type="text", name="name", placeholder="Teljes név", required="ture").form-control.mb-1
-                                        input(type="email", name="email", placeholder="Email", required="ture").form-control.mb-1
-                                        input(type="password", name="password", placeholder="Jelszó", required="ture").form-control.mb-1
-                                        input(type="password", name="password_again", placeholder="Jelszó ismét", required="ture").form-control.mb-1
-                                        input(type="date", name="birthday", placeholder="Születésnap", required="ture").form-control.mb-1
+                                        input(type="text", name="name", placeholder="Teljes név", required="ture").form-control.rounded.mb-1
+                                        input(type="email", name="email", placeholder="Email", required="ture").form-control.rounded.mb-1
+                                        input(type="password", name="password", placeholder="Jelszó", required="ture").form-control.rounded.mb-1
+                                        input(type="password", name="password_again", placeholder="Jelszó ismét", required="ture").form-control.rounded.mb-1
+                                        input(type="date", name="birthday", placeholder="Születésnap", required="ture").form-control.rounded.mb-1
                                         br
                                         input(type="submit", name="submit" value="Regisztrálok").btn.btn-primary.gradient-custom-2
                                         // <a class="text-muted" href="#!">Forgot password?</a>
