--- a/views/layout.pug
+++ b/views/layout.pug
@@ -57,7 +57,7 @@ html(lang='hu')
         nav.navbar.navbar-expand-lg.bg-dark
             .container-fluid
                 a.ms-4.navbar-brand.nav-link(href='/', title='Celebrate Together', alt='Celebrate Together')
-                    img(title='Celebrate Together', alt='Celebrate Together', src='/images/logo.png')
+                    img(title='Celebrate Together', alt='Celebrate Together', src='/images/logo_attetszo.png')
                     span.logo-text.ms-2 Celebrate Together
 
                 //button.navbar-toggler(type='button' data-bs-toggle='collapse' data-bs-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation')
