--- a/views/index.pug
+++ b/views/index.pug
@@ -8,6 +8,8 @@ block content
                 span !
             br
 
+        a(href="/chat/4/") Chat teszt "Kér Ede"-vel
+
         //if !user
             br
             a(href="/login").mt-5.ml-5 Bejelentkezés
