--- a/views/chat.pug
+++ b/views/chat.pug
@@ -3,14 +3,21 @@ extends layout
 block styles
     link(href='/css/chat.css?v=1', rel='stylesheet', type='text/css')
 
+block scripts
+    script(src="/js/chat.js", type='text/javascript') 
+
 block content 
     h1 Chat - 
         a(href=makeUserUrl(other_user))= other_user.name
 
     h2 Üzenetek:
     div
-        ul
-            for m in chat_messages
+        ul#messages-list
+
+            //
+            // PUBLIC/JS/CHAT.JS
+            //
+            //for m in chat_messages
                 if m.src_user_id == user.id
                     li.message.self-message
                         p= m.message
@@ -30,3 +37,6 @@ block content
     form(action="/chat/"+other_user.id+"/send", method="POST")
         input(type="text" name="message" placeholder="Írd ide az üzenetedet!", required="true").form-control
         input(type="submit", name="submit", value="Üzenet küldése").btn.btn-primary.w-100.mt-2.btn-lg
+
+    // EZT NE TÖRÖLD:
+    span#other_user_id(style="display:none;")= other_user.id
