--- a/views/login.pug
+++ b/views/login.pug
@@ -4,7 +4,7 @@ block styles
     link(href='/css/form.css?v=1', rel='stylesheet', type='text/css')
 
 block content
-    section.h-100.gradient-form.gradient-custom-1
+    section.h-100
         .container.py-5.h-100
             .row.d-flex.justify-content-center.align-items-center.h-100
                 .col-xl-10
