--- a/views/register.pug
+++ b/views/register.pug
@@ -3,7 +3,7 @@ extend layout
 block content
     h1 Celebrate Together!
 
-    section.h-100.gradient-form.gradient-custom-1
+    section.h-100
         .container.py-5.h-100
             .row.d-flex.justify-content-center.align-items-center.h-100
                 .col-xl-10
