--- a/views/contact.pug
+++ b/views/contact.pug
@@ -25,7 +25,7 @@ block content
                                 h3 Foglalkozása: pék
                                 h3 Szenvedélye: hangyaszámolás
                                 h3 Kedvenc tárgya: semmittevés
-                                h3 Beceneve: Csöndes gyerek
+                                h3 Fedőneve: Csöndes gyerek
                                 h3 Kedvenc film: Senki
                             .col-lg-6.pt-5.p-2
                                 h1.felkover Név: Máté
@@ -36,4 +36,3 @@ block content
                                 h3 Kedvenc film: Ip Man
                             .col-lg-6.d-flex.align-items-center.pt-5
                                 img.rolunkkep(src='images/mate.jpg')
-                            
