--- a/views/contact.pug
+++ b/views/contact.pug
@@ -7,32 +7,36 @@ block content
             .row.d-flex.justify-content-center.align-items-center
                 .col-xl-8
                     .card.rounded-3.text-black.bg-light
-                        .row.g-0
-                            .col-lg-6.p-2
+                        .row.g-0.piros
+                            .col-lg-6.p-2.pt-4
                                 h1.felkover Név: Martin
                                 h3 Foglalkozása: cirkuszi bohóc
                                 h3 Szenvedélye: krumplipucolás
                                 h3 Kedvenc tárgya: történelem
+                                h3 Kedvenc étel: baguette
                                 h3 Fedőneve: MindenS
                                 h3 Kedvenc film: Napóleon
-                            .col-lg-6.d-flex.align-items-center
+                            .col-lg-6.d-flex.align-items-center.p-2
                                 img.rolunkkep(src='images/martin.jpg')
-
-                            .col-lg-6.d-flex.align-items-center.pt-5
+                        .row.g-0
+                            .col-lg-6.d-flex.align-items-center.pt-4.p-2
                                 img.rolunkkep(src='images/norbi.jpg')
                             .col-lg-6.pt-5.p-2
                                 h1.felkover Név: Norbi
                                 h3 Foglalkozása: pék
                                 h3 Szenvedélye: hangyaszámolás
                                 h3 Kedvenc tárgya: semmittevés
+                                h3 Kedvenc étel: rántotta
                                 h3 Fedőneve: Csöndes gyerek
                                 h3 Kedvenc film: Senki
+                        .row.g-0.zold
                             .col-lg-6.pt-5.p-2
                                 h1.felkover Név: Máté
                                 h3 Foglalkozása: természetfotós
                                 h3 Szenvedélye: fűnyírás
                                 h3 Kedvenc tárgya: testnevelés
+                                h3 Kedvenc étel: mitraillette
                                 h3 Fedőneve: Ispán
                                 h3 Kedvenc film: Ip Man
-                            .col-lg-6.d-flex.align-items-center.pt-5
+                            .col-lg-6.d-flex.align-items-center.pt-4.p-2
                                 img.rolunkkep(src='images/mate.jpg')
