--- a/views/contact.pug
+++ b/views/contact.pug
@@ -19,7 +19,7 @@ block content
                             .col-lg-6.d-flex.align-items-center.p-2
                                 img.rolunkkep(src='images/martin.jpg')
                         .row.g-0
-                            .col-lg-6.d-flex.align-items-center.pt-4.p-2
+                            .col-lg-6.d-flex.align-items-center.p-2
                                 img.rolunkkep(src='images/norbi.jpg')
                             .col-lg-6.pt-5.p-2
                                 h1.felkover Név: Norbi
@@ -38,5 +38,5 @@ block content
                                 h3 Kedvenc étel: mitraillette
                                 h3 Fedőneve: Ispán
                                 h3 Kedvenc film: Ip Man
-                            .col-lg-6.d-flex.align-items-center.pt-4.p-2
+                            .col-lg-6.d-flex.align-items-center.p-2
                                 img.rolunkkep(src='images/mate.jpg')
