Adding birthdays and events

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -108,11 +108,11 @@ html(lang='hu')
                                 | Kezdőlap
                         
                         li.nav-item
-                            a.nav-link(href='#')
+                            a.nav-link(href='/events')
                                 | Események
 
                         li.nav-item
-                            a.nav-link(href='#')
+                            a.nav-link(href='/birthdays')
                                 | Szülinapok
 
                         li.nav-item
