--- a/views/event.pug
+++ b/views/event.pug
@@ -3,7 +3,7 @@ extends layout
 block content 
     h1= event.name
     
-    if is_editor
+    if event.is_user_editor
         a(href="/event/"+event.id+"/edit") Szerkesztés
 
     br
