--- a/views/contact.pug
+++ b/views/contact.pug
@@ -1,8 +1,8 @@
 extends layout 
 
-block content 
-    section.h-100
-        h1.text-center.p-3.felkover.feher Kik vagyunk mi?
+block content
+    section
+        h1.text-center.p-3.fw-bold.text-white Kik vagyunk mi?
         .container.h-100
             .row.d-flex.justify-content-center.align-items-center
                 .col-xl-8
