--- a/views/event.pug
+++ b/views/event.pug
@@ -5,6 +5,10 @@ block content
     
     if event.is_user_editor
         a(href="/event/"+event.id+"/edit") Szerkesztés
+    else if event.is_user_attending
+        a.btn.btn-danger(href="/event/"+event.id+"/unattend") Részvétel törlése
+    else if !event.is_user_attending
+        a.btn.btn-success(href="/event/"+event.id+"/attend") Részvétel
 
     br
     p= event.text
