--- a/views/event_edit.pug
+++ b/views/event_edit.pug
@@ -1,24 +1,30 @@
 extends layout 
 
 block content 
-    h1.ms-3.mt-3.fw-bold Esemény szerkesztése
+    main.section-white
+        h1.ms-3.mt-3.fw-bold Esemény szerkesztése
 
-    div(class="container-fluid")
-        .row
-            form(action="/event/"+event.id+"/edit", method="POST", class="col-4")
-                label(for="name") Az esemény neve:
-                input(type="text", name="name", placeholder="Az esemény neve", required="ture", value=event.name).form-control
+        div(class="container-fluid")
+            .row
+                form(action="/event/"+event.id+"/edit", method="POST", class="col-4")
+                    label(for="name") Az esemény neve:
+                    input(type="text", name="name", placeholder="Az esemény neve", required="ture", value=event.name).form-control
 
-                label(for="text") Az esemény leírása:
-                input(type="text", name="text", placeholder="Az esemény leírása", required="ture", value=event.text).form-control
+                    label(for="text") Az esemény leírása:
+                    input(type="text", name="text", placeholder="Az esemény leírása", required="ture", value=event.text).form-control
 
-                label(for="place") Az esemény helyszine:
-                input(type="text", name="place", placeholder="Az esemény helyszine", required="ture", value=event.place).form-control
+                    label(for="place") Az esemény helyszine:
+                    input(type="text", name="place", placeholder="Az esemény helyszine", required="ture", value=event.place).form-control
 
-                br
-                input(type="submit", name="submit" value="Módosítások mentése").btn.btn-success
+                    br
+                    input(type="submit", name="submit" value="Módosítások mentése").btn.btn-success
 
-            form(action="/event/" + event.id + "/delete", method="POST", class="col-4")
-                input(type="submit", name="submit" value="Esemény törlése").btn.btn-outline-danger
+            hr
+
+            .row
+                form(action="/event/" + event.id + "/delete", method="POST", class="col-4")
+                    input(type="submit", name="submit" value="Esemény törlése").btn.btn-outline-danger
+                    br
+                    span.small.text-muted Figyelem! A művelet nem vonható vissza!
     
     div(style="margin-bottom:500px;")
