--- a/views/my_events.pug
+++ b/views/my_events.pug
@@ -1,11 +1,25 @@
 extends layout 
 
-block content 
-    h1 Eseményeim
+block content
+    main.section-white
+        h1 Eseményeim
 
-    if events
-        for event in events
-            a(href=makeEventUrl(event))= event.name
-            br
-    else  
-        p(style="font-style: italic;").text-muted Még nincs saját eseményed!
+        hr
+
+        if events
+            .text-center
+                for event in events
+                    a(href=makeEventUrl(event)).row.event-row
+                        .col-sm
+                            p.fw-bold= event.name
+                        .col-sm
+                            p= stripEventName(event.text)
+                        .col-sm
+                            p.text-muted= event.place
+                        .col-sm
+                            p.text-muted= formatDate(event.date)
+        else  
+            p(style="font-style: italic;").text-muted Még nincs saját eseményed!
+
+
+    div(style="margin-bottom:500px;")
