--- a/views/events.pug
+++ b/views/events.pug
@@ -1,9 +1,20 @@
 extends layout 
 
 block content 
-    h1 Események
+    main.section-white
+        h1 Események
+        hr
 
-    for e in events
-        a(href="/event/" + e.event_id)= e.event_name
-        p.fw-bold= e.event_date
-        br
+        .text-center
+            for event in events
+                a(href=makeEventUrl(event)).row.event-row
+                    .col-sm
+                        p.fw-bold= event.name
+                    .col-sm
+                        p= stripEventName(event.text)
+                    .col-sm
+                        p.text-muted= event.place
+                    .col-sm
+                        p.text-muted= formatDate(event.date)
+
+    div(style="margin-bottom:500px;")
