--- a/views/index.pug
+++ b/views/index.pug
@@ -15,7 +15,7 @@ block content
                                     .col-lg-12.p-2.pt-4
                                         for post in posts
                                             .container.hatter.rounded-3.mb-3
-                                                .container.border-bottom.border-dark.divfont.p-1
+                                                .container.border-bottom.divfont.p-1
                                                     img(src='images/profiles/avatar1.png', alt='logo').avatarkep
                                                     p.felkover.inlineblock.ps-1=post.name
                                                 .container.divfont.pt-1.ps-3
