--- a/views/index.pug
+++ b/views/index.pug
@@ -17,22 +17,22 @@ block content
                                         .container.pb-3.col-xl-11
                                             form(method="POST", action="/chat/" + user.id + "/public_post")
                                                 textarea(name="text", rows="5" placeholder="Ide azt írsz, amit akarsz").form-control.lmfao.textareadetails.rounded
-                                                .row
-                                                    input(type="submit", name="submitpost" value="Posztolás").btn.btn-primary.btn-lg.m-2
+                                                input(type="submit", name="submitpost" value="Posztolás").btn.btn-primary.btn-lg.m-2
                     
-                    .row.d-flex.justify-content-center.align-items-center
-                        .col-xl-10
-                            .card.rounded-3.text-black.bg-light
-                                .row.g-0
-                                    .col-lg-12.p-2.pt-4
-                                        for post in posts
-                                            .container.hatter.rounded-3.mb-3
-                                                .container.border-bottom.divfont.p-1
-                                                    img(src='images/profiles/avatar1.png', alt='logo').avatarkep
-                                                    p.felkover.inlineblock.ps-1
-                                                        a(href="/user/" + post.user_id + "/s")= post.name
-                                                .container.divfont.pt-1.ps-3
-                                                    p= post.message
+                    if posts
+                        .row.d-flex.justify-content-center.align-items-center
+                            .col-xl-10
+                                .card.rounded-3.text-black.bg-light
+                                    .row.g-0
+                                        .col-lg-12.p-2.pt-4
+                                            for post in posts
+                                                .container.hatter.rounded-3.mb-3
+                                                    .container.border-bottom.divfont.p-1
+                                                        img(src='images/profiles/avatar1.png', alt='logo').avatarkep
+                                                        p.felkover.inlineblock.ps-1
+                                                            a(href="/user/" + post.user_id + "/s")= post.name
+                                                    .container.divfont.pt-1.ps-3
+                                                        p= post.message
 
 
         //if !user
